--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,17 @@
       <version>1.10.4</version>
     </dependency>
 
+    <!-- For REST services -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId><version>2.4.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>RealEstateApp</finalName>
